# sweet_stock

./: .gitignore  app.py  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 549dc3ae9246_.py
config/: __init__.py  settings.py
database/: __init__.py  builder.py  helpers.py  mixins.py
endpoints/: product.py  provider.py  root.py  storage.py
models/: __init__.py  base.py  sweet_stock.py
repository/: product.py  provider.py  storage.py
repository/model_repo/: __init__.py  creation_mixin.py  deletion_mixin.py  model_repo.py  retrieving_mixin.py  updating_mixin.py
schemas/: order.py  product.py  product_stat.py  provider.py  storage.py
service/: __init__.py  product.py  provider.py  storage.py
utils/: __init__.py  pydantic_encoder.py
